--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,38 +1,54 @@
 {
-    "name": "RBAC-Ops Development",
-    "build": {
-        "dockerfile": "../Dockerfile",
-        "context": "..",
-        "target": "builder"
-    },
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "golang.go",
-                "ms-azuretools.vscode-docker",
-                "streetsidesoftware.code-spell-checker",
-                "eamodio.gitlens",
-                "davidanson.vscode-markdownlint"
-            ],
-            "settings": {
-                "go.toolsManagement.checkForUpdates": "local",
-                "go.useLanguageServer": true,
-                "go.lintTool": "golangci-lint",
-                "editor.formatOnSave": true,
-                "editor.codeActionsOnSave": {
-                    "source.organizeImports": true
-                }
-            }
+  "name": "RBAC-Ops DevContainer",
+  "image": "mcr.microsoft.com/devcontainers/base:jammy",
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "go.toolsManagement.checkForUpdates": "local",
+        "go.useLanguageServer": true,
+        "go.lintTool": "golangci-lint",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+          "source.organizeImports": "always"
         }
+      },
+      "extensions": [
+        "golang.go",
+        "ms-azuretools.vscode-docker",
+        "streetsidesoftware.code-spell-checker",
+        "eamodio.gitlens",
+        "davidanson.vscode-markdownlint"
+      ]
+    }
+  },
+  "features": {
+    "ghcr.io/devcontainers-extra/features/neovim-apt-get:1": {},
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/devcontainers/features/go:1": {
+      "version": "1.24.3"
     },
-    "features": {
-        "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-        "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {}
-    },
-    "mounts": [
-        "source=${localEnv:HOME}/.kube,target=/root/.kube,type=bind,consistency=cached"
-    ],
-    "remoteUser": "root",
-    "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind",
-    "workspaceFolder": "/workspace"
+    "ghcr.io/eitsupi/devcontainer-features/jq-likes:2": {},
+    "ghcr.io/jungaretti/features/make:1": {},
+    "ghcr.io/devcontainers-extra/features/protoc:1": {},
+    "ghcr.io/devcontainers-extra/features/curl-apt-get:1": {},
+    "ghcr.io/devcontainers/features/common-utils:2": {
+      "username": "automatic",
+      "installZsh": true,
+      "configureZshAsDefaultShell": true,
+      "installOhMyZsh": true,
+      "upgradePackages": true,
+      "additionalPackages": [
+        "make",
+        "git",
+        "bash",
+        "curl",
+        "gcc",
+        "g++",
+        "musl-dev",
+        "sudo",
+        "gnupg2"
+      ]
+    }
+  },
+  "postCreateCommand": "go install github.com/go-delve/delve/cmd/dlv@latest && make install-deps"
 }
