refactor: rename project from RBAC-Ops to RBAC-Scope across all files

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "RBAC-Ops DevContainer",
+  "name": "RBAC-Scope DevContainer",
   "image": "mcr.microsoft.com/devcontainers/base:jammy",
   "customizations": {
     "vscode": {
